--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p>EmployeeDetails works!</p>
+<button (click)="navigateTO('EmployeeDetails')">EmployeeDetails</button>
+<button  (click)="navigateTO('Attendance')">Attendance</button>
