--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
@@ -1,44 +1,36 @@
-<!-- <div class="grid-container">
-    <div class="item1">
-        <h1 class="pTitle">Employee Tracker</h1>
-
-    </div>
-    <div class="item2">
-        <div class="SideBarContent">DashBoard</div>
-        <div class="SideBarContent">Add Profile</div>
-        <div class="SideBarContent">Edit Profile</div>
-        <div class="SideBarContent">Update Profile</div>
-        <div class="SideBarContent">Switch Account</div>
-
-    </div>
-    <div class="item3">
-        <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
-            <ng-template pTemplate="header">
-                <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
-            </ng-template>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae
-                numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis
-                esse, cupiditate neque
-                quas!
-            </p>
-            <ng-template pTemplate="footer">
-                <p-button label="Save" icon="pi pi-check"></p-button>
-                <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary"
-                    [style]="{ 'margin-left': '.5em' }"></p-button>
-            </ng-template>
-        </p-card>
-    </div> -->
-
-
-    <div class="sidebar">
-        <a class="active" href="#home"><p-card header="Home"
-                [style]="{ width: '260px',height:'60px',paddingBottom:'5px',textAlign:'center'}" class="home"></p-card></a>
-        <a href="#news"> <p-card header="New Profile" [style]="{ width: '260px',height:'60px',paddingBottom:'5px'}"
-                class="home"></p-card></a>
-        <a href="#contact"> <p-card header="View Profile" [style]="{ width: '260px' ,height:'60px',paddingBottom:'5px'}"
-                class="home"></p-card></a>
-        <a href="#about"> <p-card header="Account" [style]="{ width: '260px',height:'60px',paddingBottom:'5px' }" class="home">
-            </p-card></a>
-    </div>
-
+<div class="sidebar">
+  <a class="active" href="#home"
+    ><p-card
+      header="Home"
+      [style]="{
+        width: '260px',
+        height: '60px',
+        paddingBottom: '5px',
+        textAlign: 'center'
+      }"
+      class="home"
+    ></p-card
+  ></a>
+  <a href="#news">
+    <p-card
+      header="New Profile"
+      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
+      class="home"
+    ></p-card
+  ></a>
+  <a href="#contact">
+    <p-card
+      header="View Profile"
+      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
+      class="home"
+    ></p-card
+  ></a>
+  <a href="#about">
+    <p-card
+      header="Account"
+      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
+      class="home"
+    >
+    </p-card
+  ></a>
+</div>
