--- a/src/app/attendance/view-table/view-table.component.html
+++ b/src/app/attendance/view-table/view-table.component.html
@@ -1,20 +1,31 @@
-<!-- <div class="card">
-    <p-table [value]="products" styleClass="p-datatable-striped" [tableStyle]="{'min-width': '50rem'}">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Code</th>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Quantity</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-product>
-            <tr>
-                <td>{{product.code}}</td>
-                <td>{{product.name}}</td>
-                <td>{{product.category}}</td>
-                <td>{{product.quantity}}</td>
-            </tr>
-        </ng-template>
-    </p-table>
-</div> -->
+<div class="EmployeeDetails">
+  <p-table [value]="employeeDetails" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>EmployeeNo</th>
+        <th>Photo</th>
+        <th>EmployeeName</th>
+        <th>Department</th>
+        <th>Gender</th>
+        <th>Status</th>
+        <th>Email</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-employeeDetail>
+      <tr>
+        <td>{{ employeeDetail.EmployeeNo }}</td>
+        <td>{{ employeeDetail.Photo }}</td>
+        <td>{{ employeeDetail.EmployeeName }}</td>
+        <td>{{ employeeDetail.Department }}</td>
+        <td>{{ employeeDetail.Gender }}</td>
+        <td>
+          <p-button
+            *ngIf="employeeDetail.Active == false"
+            label="{{ employeeDetail.Active }}"
+          ></p-button>
+        </td>
+        <td>{{ employeeDetail.Email }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
