--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
@@ -37,9 +37,9 @@ body {
   background-color: rgb(10, 12, 18);
   color: blue;
   --_p: 0%;
-  -webkit-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 1);
-  -moz-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 1);
-  box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 1);
+  -webkit-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
+  -moz-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
+  box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
 }
 
 div.content {
