--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
@@ -1,36 +1,10 @@
 <div class="sidebar">
   <a class="active" href="#home"
-    ><p-card
-      header="Home"
-      [style]="{
-        width: '260px',
-        height: '60px',
-        paddingBottom: '5px',
-        textAlign: 'center'
-      }"
-      class="home"
-    ></p-card
+    ><p-button label="Home" class="home"></p-button
   ></a>
-  <a href="#news">
-    <p-card
-      header="New Profile"
-      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
-      class="home"
-    ></p-card
-  ></a>
+  <a href="#news"> <p-button label="New Profile" class="home"></p-button></a>
   <a href="#contact">
-    <p-card
-      header="View Profile"
-      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
-      class="home"
-    ></p-card
+    <p-button label="View Profile" class="home"></p-button
   ></a>
-  <a href="#about">
-    <p-card
-      header="Account"
-      [style]="{ width: '260px', height: '60px', paddingBottom: '5px' }"
-      class="home"
-    >
-    </p-card
-  ></a>
+  <a href="#about"> <p-button label="Account" class="home"> </p-button></a>
 </div>
