--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
@@ -37,9 +37,9 @@ body {
   background-color: rgb(10, 12, 18);
   color: blue;
   --_p: 0%;
-  -webkit-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
-  -moz-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
-  box-shadow: -3px -3px 11px -3px rgba(0, 0, 0,9);
+  -webkit-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 9);
+  -moz-box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 9);
+  box-shadow: -3px -3px 11px -3px rgba(0, 0, 0, 9);
 }
 
 div.content {
@@ -62,6 +62,13 @@ div.content {
   div.content {
     margin-left: 0;
   }
+}
+
+.home {
+  width: '260px';
+  height: '60px';
+  padding-bottom: '5px';
+  width: 200px;
 }
 
 @media screen and (max-width: 400px) {
