--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
@@ -1,10 +1,6 @@
 <div class="sidebar">
-  <a class="active" href="#home"
-    ><p-button label="Home" class="home"></p-button
-  ></a>
-  <a href="#news"> <p-button label="New Profile" class="home"></p-button></a>
-  <a href="#contact">
-    <p-button label="View Profile" class="home"></p-button
-  ></a>
-  <a href="#about"> <p-button label="Account" class="home"> </p-button></a>
+  <a href="#home"><p-card styleClass="home" header="Home"></p-card> </a>
+  <a href="#news"> <p-card styleClass="home" header="New Profile"></p-card></a>
+  <a href="#contact"> <p-card styleClass="home" header="View Profile"></p-card></a>
+  <a href="#about"> <p-card styleClass="home" header="Account"> </p-card></a>
 </div>
