--- a/src/app/attendance/view-table/view-table.component.css
+++ b/src/app/attendance/view-table/view-table.component.css
@@ -1,6 +1,26 @@
-.EmployeeDetails {
+.employeeDetails {
     width: 80%;
-    position: absolute;
+    position :absolute;
     margin-top: 100px;
     margin-left: 300px;
 }
+
+:host >>> .table{
+  max-width: auto;
+}
+
+@media screen and (max-width: 400px) {
+    :host >>> .table{
+        text-align: center;
+        float: none;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    :host >>> .table {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+
+  }
