--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="navBar">
+<div id="employee_homepage_nav">
   <img
     src="../../assets/Images/1_11zon-fotor-2023090111414-removebg-preview (1).png"
     alt="Employee Tracker"
@@ -7,7 +7,7 @@
 </div>
 <p-divider></p-divider>
 
-<div id="mainView">
+<div id="employe_card_holder">
   <p-card class="employee_details_card" (click)="navigateTO('EmployeeDetails')">
     <div class="employe_card_text">Employee Details</div>
     <ng-template pTemplate="header">
