--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.html
@@ -4,7 +4,7 @@
     (click)="toggleMenu()"
     [ngClass]="{ 'is-active': isMenuActive }"
   >
-    <div class="toggle2">
+    <div class="toggleBtn">
       <span></span>
     </div>
   </div>
