--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,14 +8,15 @@
 #employe_card_holder {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: last baseline;
+    /* justify-content: space-evenly; */
+    /* align-items: last baseline; */
     margin: 90px auto;
+    width: 1300px;
 }
 
 .employee_details_card {
     cursor: pointer;
-    margin-top: 20px;
+    margin: 30px;
     text-align: center;
     transition: 1s;
     width: 360px;
