--- a/src/app/attendance/attendance.component.html
+++ b/src/app/attendance/attendance.component.html
@@ -1,1 +1,4 @@
-<app-side-nav-bar></app-side-nav-bar>
+<app-side-nav-bar [page]="pages"></app-side-nav-bar>
+<div id="main">
+  <router-outlet></router-outlet>
+</div>
