--- a/src/app/employee-details/employee-details.component.html
+++ b/src/app/employee-details/employee-details.component.html
@@ -1,2 +1,4 @@
-<p>Employee Working</p>
-<app-side-nav-bar></app-side-nav-bar>
+<app-side-nav-bar [page]="pages"></app-side-nav-bar>
+<div id="main">
+  <router-outlet></router-outlet>
+</div>
