--- a/src/app/employee-details/bar-chart/bar-chart.component.html
+++ b/src/app/employee-details/bar-chart/bar-chart.component.html
@@ -1,3 +1,7 @@
-<div class="card">
-  <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
+<div class="row">
+  <div class="col-lg-6">
+    <h3>Employee-Chart</h3>
+    <canvas id="canvas" >{{chartdata}}</canvas>
+  </div>
 </div>
+
