inactive page_bending_put

--- a/src/app/employee-details/inactive-employee/inactive-employee.component.html
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.html
@@ -23,7 +23,11 @@
           <td>{{ lefted.EmployeeNo }}</td>
           <td>{{ lefted.deportment }}</td>
           <td>
-            <p-tag severity="warning">Inactive</p-tag>
+            <p-button
+              styleClass="p-button-warning p-button-sm"
+              (onClick)="indiviActiveFn(lefted)"
+              >Inactive</p-button
+            >
           </td>
           <td>
             <p-button
@@ -40,86 +44,45 @@
         </ng-template>
       </ng-template>
     </p-table>
-    <p-dialog header="Employee Details" [(visible)]="visible">
+    <p-dialog header="Do you want to Activate" [(visible)]="visible">
       <div
         class="flex py-2 justify-content-center"
         id="employee_details_editor"
       >
-        <form>
-          <div class="formDiv">
-            <label
-              >Employee Name : <br /><input
-                pInputText
-                [disabled]="true"
-                [value]="individualData.employeeName"
-              />
-            </label>
-            <label
-              >Employee No :<br />
-              <input
-                pInputText
-                [disabled]="true"
-                [value]="individualData.EmployeeNo"
-              />
-            </label>
+        <div class="employee_active_status_btn_space">
+          <div>
+            <label for="employee_active_status_radio_btn1" class="ml-2"
+              >Yes :</label
+            >
+            <p-radioButton
+              name="Active"
+              value="true"
+              [(ngModel)]="activating"
+              class="employee_active_status_radio_btn"
+              inputId="employee_active_status_radio_btn1"
+            ></p-radioButton>
           </div>
-          <br />
-          <div class="formDiv">
-            <label
-              >Department :<br />
-              <input
-                pInputTextarea
-                [disabled]="true"
-                [value]="individualData.deportment"
-              />
-            </label>
-            <label
-              >Mobile No :<br />
-              <input
-                pInputTextarea
-                [disabled]="true"
-                [value]="individualData.mobileNo"
-              />
-            </label>
+          <div>
+            <label for="employee_active_status_radio_btn2" class="ml-2"
+              >No :</label
+            >
+            <p-radioButton
+              name="Inactive"
+              value="false"
+              [(ngModel)]="activating"
+              class="employee_active_status_radio_btn"
+              inputId="employee_active_status_radio_btn2"
+            ></p-radioButton>
           </div>
-
-          <br />
-          <label
-            >Email :<br />
-            <input
-              pInputTextarea
-              [disabled]="true"
-              [value]="individualData.email"
-            />
-          </label>
-          <br /><br />
-          <div class="employee_active_status_btn_space">
-            <div>
-              <label for="employee_active_status_radio_btn1" class="ml-2"
-                >Activate :</label
-              >
-              <p-radioButton
-                name="Active"
-                value="true"
-                [(ngModel)]="ingredient"
-                class="employee_active_status_radio_btn"
-                inputId="employee_active_status_radio_btn1"
-              ></p-radioButton>
-            </div>
-            <div>
-              <label for="employee_active_status_radio_btn2" class="ml-2"
-                >Inactive :</label
-              >
-              <p-radioButton
-                name="Inactive"
-                value="false"
-                [(ngModel)]="ingredient"
-                class="employee_active_status_radio_btn"
-                inputId="employee_active_status_radio_btn2"
-              ></p-radioButton>
-            </div>
-          </div>
-        </form>
+        </div>
+        <br />
+        <div id="employee_active_status_submit_btn">
+          <p-button
+            label="Submit"
+            styleClass="p-button-sm"
+            (onClick)="toggleActiveFn()"
+          ></p-button>
+        </div>
       </div>
     </p-dialog>
   </p-card>
