--- a/src/app/employee-details/inactive-employee/inactive-employee.component.css
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.css
@@ -1,50 +1,35 @@
 :host ::ng-deep .p-card {
   border-radius: 25px !important;
   width: 900px;
-  height:max-content;
+  height: max-content;
   border: 2px solid black;
   margin: 10px auto;
 }
 
-.employee_details_editor{
+.employee_details_editor {
   width: max-content;
 }
 
-.employee_active_status_btn_space{
-  height:30px;
+.employee_active_status_btn_space {
+  height: 30px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.employee_active_status_radio_btn{
+.employee_active_status_radio_btn {
   position: relative;
   top: 3px;
 }
 
-.formDiv{
+.formDiv {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 500px;
 }
 
-:host ::ng-deep .p-radiobutton 
-    .p-radiobutton-box:not(.p-disabled)
-    :not(.p-highlight):hover {
-    border-color: rgb(217, 11, 141);
-}
-
-:host ::ng-deep .p-radiobutton 
-    .p-radiobutton-box.p-highlight, 
-:host ::ng-deep .p-radiobutton 
-    .p-radiobutton-box.p-highlight:hover {
-      
-    background-color: rgb(255, 123, 0);
-    border-color: rgb(255, 123, 0);
-    box-shadow: none;
-}
-
-:host ::ng-deep .p-radiobutton-icon {
-    background-color:rgb(10, 174, 224) !important;
+#employee_active_status_submit_btn {
+  display: flex;
+  justify-content: flex-end;
 }
