--- a/src/app/employee-details/inactive-employee/inactive-employee.component.html
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.html
@@ -1,11 +1,34 @@
 <div class="inactive_employe_table">
-  <p-card header="Inactive Employee List">
+  <p-card>
     <p-table
+      #dt1
       [value]="leftoverdatas"
       styleClass="p-datatable-sm p-datatable-striped"
       [paginator]="true"
       [rows]="10"
+      [globalFilterFields]="['employeeName', 'deportment', 'EmployeeNo']"
     >
+      <ng-template pTemplate="caption">
+        <div id="employee_details_searchBar">
+          <h2>Inactive Employee List</h2>
+          <div id="emp_search_clear_">
+            <input
+              pInputText
+              [(ngModel)]="clearthebar"
+              class="p-inputtext"
+              type="text"
+              (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
+              placeholder="Search keyword"
+            />
+            <p-button
+              (onClick)="clearFn(dt1)"
+              styleClass="p-button  p-button-text p-button-sm"
+            >
+              <span id="clearBtn_for_searchbar">Clear</span></p-button
+            >
+          </div>
+        </div>
+      </ng-template>
       <ng-template pTemplate="header">
         <tr>
           <th>Photo</th>
@@ -37,23 +60,27 @@
             ></p-button>
           </td>
         </tr>
-        <ng-template pTemplate="emptymessage">
-          <tr>
-            <td colspan="5">No customers found.</td>
-          </tr>
-        </ng-template>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="6" id="no_details_text">
+            No Employee found with this detail.
+          </td>
+        </tr>
       </ng-template>
     </p-table>
-    <p-dialog header="Do you want to Activate" [(visible)]="visible">
+    <p-dialog
+      header="Do you want to Activate :- {{ EmpnameFordis }}"
+      [(visible)]="visible"
+      [modal]="true"
+    >
       <div
         class="flex py-2 justify-content-center"
         id="employee_details_editor"
       >
         <div class="employee_active_status_btn_space">
           <div>
-            <label for="employee_active_status_radio_btn1" class="ml-2"
-              >Yes :</label
-            >
+            <label for="employee_active_status_radio_btn1">Yes :</label>
             <p-radioButton
               name="Active"
               value="true"
@@ -63,9 +90,7 @@
             ></p-radioButton>
           </div>
           <div>
-            <label for="employee_active_status_radio_btn2" class="ml-2"
-              >No :</label
-            >
+            <label for="employee_active_status_radio_btn2">No :</label>
             <p-radioButton
               name="Inactive"
               value="false"
